<resources>
    <string name="app_name">MyPiece</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="parse_app_id">24vUAObYQ2WeKmd0HHEWiZ1xkMCOhCVy1daLnVhv</string>
    <string name="parse_client_key">diUVK8FPpSB6pgiNhcYk8zm2DiPkQsV3uzXX2e6C</string>
    <string name="flurry_key">GQR6B8M4RW2D59HDBDYR</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in&#8230;</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="app_id">164160423926195</string>
    <string name="exception">Exception: %1$s</string>
    <string name="twitter_sharedpref_name">Twitter-Credentials</string>
    <string name="TWITTER_CONSUMER_KEY">9EQEJ555WkcLUPfQ0M19nCcgh</string>
    <string name="TWITTER_CONSUMER_SECRET">U23ZfmZ0pOWs0masPoFE0CvHl7VRevsjztVzBbT7ePsivfb6Kd</string>
    <string name="duplicate_msg">Can not post duplicate message</string>
    <string name="tweet_success">Tweet successfully</string>
    <string name="support_having_issue">Comments? Questions? \nWe\'d love to hear from you.</string>
    <string name="support_date">Date</string>
    <string name="support_call_back_number">Callback Number (optional)</string>
    <string name="support_issue">Issue</string>
    <string name="support_submit">Submit</string>
    <string name="share101">Share</string>
    <string name="emf">Email</string>
    <string name="via">Or contact us via</string>
    <string name="signup_first_nm">First Name</string>
    <string name="signup_last_nm">Last Name</string>
    <string name="signup_email">Email</string>
    <string name="signup_pwd">Password</string>
    <string name="signup_c_pwd">Confirm Password</string>
    <string name="signup_birthdate">Birthdate</string>
    <string name="signup_male">Male</string>
    <string name="signup_female">Female</string>
    <string name="menu_home">Home</string>
    <string name="menu_mypieces">My Purchases</string>
    <string name="menu_filter">My Account</string>
    <string name="menu_profile">Get in Touch!</string>
    <string name="menu_support">Contact us</string>
    <string name="menu_share">Tell a friend</string>
    <string name="menu_french">French</string>
    <string name="menu_logout">Logout</string>
    <string name="nothing">Looks like you don\'t have any deals saved yet, check out current deals.</string>
    <string name="clear_all">Reset</string>
    <string name="search">Search</string>
    <string name="connect_fb">Connect with Facebook</string>
    <string name="signup_email_main">Sign up with Email</string>
    <string name="login">MyPiece with email</string>
    <string name="take_a_tour">take a tour</string>
    <string name="signup_btn">Sign up</string>
    <string name="login_btn">Login</string>
    <string name="login1">Log in</string>
    <string name="t_one_title">Get your piece. No Strings Attached.</string>
    <string name="t_one">Find local promotions and discounts to your favorite restaurants free.</string>
    <string name="t_two_title">Piece together your local finds.</string>
    <string name="t_two">Use your location to access deals just a stone\'s throw away.</string>
    <string name="t_three_title">Your piece of the pie.</string>
    <string name="t_three">Once you find your deal, redemption is simply a click away.</string>
    <string name="t_four_title">Lets Get Started!</string>
    <string name="t_four">It\'s free and easy to use. Sign up with one click by connecting with your facebook account, or using your email address.</string>
    <string name="already_hv_acc">Already have an account ? Login</string>
    <string name="forgot_pwd">Forgot your password ?</string>
    <string name="reset">Reset</string>
    <string name="or">or</string>
    <string name="signup_text">Sign Up</string>
    <string name="get_deal">Get the deal now</string>
    <string name="use_deal">Use this deal</string>
    <string name="save_deal_btn">Save Deal</string>
    <string name="redeem_deal_btn">Redeem Deal</string>
    <string name="expired_btn">Expired</string>
    <string name="redeemed_btn">Redeemed</string>
    <string name="not_available">Not Available</string>
    <string name="is_curent">Is Currently</string>
    <string name="pls_check_home">Please check the home page for the other great offers</string>
    <string name="here_is_ur_piece">Here Is Your Piece</string>
    <string name="in_d_next">In the next</string>
    <string name="verification_code">Verification Code</string>
    <string name="valid_till">Valid till</string>
    <string name="love_ur_app">Did you enjoy an awesome discount today? Feeling well-fed and satisfied?
Spread the word.</string>
    <string name="share_text">Hey! I thought you would love this app to help you save big on local restaurants free. Download it at www.mypiece.co/download</string>
    <string name="share_fb_btn">Share on Facebook</string>
    <string name="message_btn">Tell a friend</string>
    <string name="share_by_email">Share by Email</string>
    <string name="share_on_twitter">Share on Twitter</string>
    <string name="skip_ad">Skip Ad</string>
    <string name="skip_now">Skip Ad Now</string>
    <string name="credit_btn">1 Credit</string>
    <string name="valid_d">Valid</string>
    <string name="between_d">Between</string>
    <string name="to_seprate_d">to</string>
    <string name="get_directions_d">Get Directions</string>
    <string name="time_d">Time remaining</string>
    <string name="cancel_d">Cancel</string>
    <string name="signup_alert">I accept terms and conditions, and allow for communication from Mypiece.</string>
    <string name="signup_alert_cancel">Cancel</string>
    <string name="signup_alert_agree">Agree</string>
    <string name="you_have_already_used_this_deal">You have already used this deal.</string>
    <string name="valid_in">Valid In</string>
    <string name="offer_available_in">Offer Available In</string>
    <string name="title_activity_main_activity12">MainActivity12</string>
    <string name="pull_start">Pull to refresh..</string>
    <string name="pull_medium">Release to refresh..</string>
    <string name="pull_end">Loading..</string>
    <string name="no_deal_avilable_txt">No Deals Available!</string>
    <string name="ok_btn">Ok</string>
    <string name="app_tag">LocationUpdates</string>
    <string name="app_description">        Displays current address and current or updated location using Location Services</string>
    <string name="address_output_string">%1$s %2$s %3$s</string>
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="latlng">Lat/Long:</string>
    <string name="address">Address:</string>
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">        Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">        Location update error. code %1$d message %2$s</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="by_creating_an_account_you_agree_to_the">By creating an account you agree to the</string>
    <string name="ConnectGooglePlus">CONNECT WITH Google+</string>
    <string name="ConnectFacebook">CONNECT WITH Facebook</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="ShowPassword">Show Password</string>
    <string name="FindFacebook">Find us on Facebook</string>
    <string name="GetInTouchEmail">Shoot us an email</string>
    <string name="GetInTouchEmailID">support@mypiece.co</string>
    <string name="GetInTouchCAll">Give us a call (or text)</string>
    <string name="GetInTouchCAllID">514 823 0286</string>
    <string name="CheckOutScreenTitle">Quick Tip</string>
    <string name="CheckOutScreenMsg1">Each purchase may only be</string>
    <string name="CheckOutScreenMsg2">redeemed once</string>
    <string name="CheckOutScreenMsgFooter">Do not show me this again</string>
    <string name="Nav_Drawer_GetInTouch">Get In Touch</string>
</resources>