<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Nav_Drawer_GetInTouch"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/FindFacebook"
                android:textColor="@color/app_primary"
                android:gravity="center"
                android:textSize="21dp"
                />

            <LinearLayout
                android:id="@+id/fb_btn"
                android:layout_width="60dp"
                android:layout_marginTop="20dp"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:background="@drawable/fb_logo"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/GetInTouchEmail"
                android:textColor="@color/app_primary"
                android:gravity="center"
                android:textSize="21dp"
                />

            <TextView
                android:id="@+id/sendEmail"
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/GetInTouchEmailID"
                android:textColor="@color/app_primary"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="23dp"
                />



        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/GetInTouchCAll"
                android:textColor="@color/app_primary"
                android:gravity="center"
                android:textSize="21dp"
                />

            <TextView
                android:id="@+id/call_support"
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/GetInTouchCAllID"
                android:textColor="@color/app_primary"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="23dp"
                />



        </LinearLayout>



    </LinearLayout>

</LinearLayout>