<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/rounded_cornor"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/CheckOutScreenTitle"
        android:textColor="@color/app_primary"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:gravity="center"
        android:textColor="@color/app_primary"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="18sp"
        android:layout_marginTop="45dp"
        android:layout_width="match_parent"
        android:text="@string/CheckOutScreenMsg1"
        android:layout_height="wrap_content" />

    <TextView
        android:gravity="center"
        android:textColor="@color/app_primary"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:text="@string/CheckOutScreenMsg2"
        android:layout_height="wrap_content" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:gravity="center"
            android:textColor="@color/app_primary"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="18sp"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:text="@string/CheckOutScreenMsgFooter"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/dontShowCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>





    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="15dp"
        android:background="#32b253"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/btnOk"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center"
                android:text="OK"
                android:textSize="20dp"
                android:textStyle="bold|italic"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>