<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_relative"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginRight="-6dp"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_logo_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_logo"
            android:layout_marginTop="90dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/my_piece_text"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:background="@drawable/title_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_googlePlus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/sign_in_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/google_plus_btn"
                android:gravity="center_vertical|center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/ConnectGooglePlus"
                    android:textColor="#ffffff"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:paddingTop="18dp"
                    android:paddingBottom="18dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_facebook"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:id="@+id/sign_fb_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/facebook_back"
                android:gravity="center_vertical|center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/ConnectFacebook"
                    android:textColor="#ffffff"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:paddingTop="18dp"
                    android:visibility="visible"
                    android:paddingBottom="18dp"/>

                <!--<com.facebook.login.widget.LoginButton-->
                    <!--android:id="@+id/login_button"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center_horizontal"-->
                    <!--android:layout_marginTop="30dp"-->
                    <!--android:layout_marginBottom="30dp" />-->

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/relative_login_button"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:padding="10dp"
                android:gravity="center_horizontal" >


                <Button
                    android:padding="10dp"
                    android:id="@+id/already_hv_acc_btn"
                    android:layout_width="135dp"
                    android:layout_height="50dp"
                    android:background="@drawable/submit_btn_blue"
                    android:gravity="center_vertical|center"
                    android:text="@string/login1"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:layout_marginRight="4dp"/>

                <Button
                    android:id="@+id/signup_btn"
                    android:layout_width="135dp"
                    android:layout_height="50dp"
                    android:background="@drawable/submit_btn_blue"
                    android:gravity="center_vertical|center"
                    android:text="@string/Sign_Up"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:layout_marginLeft="4dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/termsCondition"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_login"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/by_creating_an_account_you_agree_to_the"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:textSize="13dp"/>

            <TextView
                android:id="@+id/textViewTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/terms_and_conditions"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:textSize="13dp"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:padding="1dp"
                android:layout_marginLeft="120dp"
                android:layout_marginRight="120dp"
                ></LinearLayout>


            <CheckBox
                android:id="@+id/chkAndroid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:visibility="gone"
                android:checked="true" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/footer_scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:padding="20dp"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:gravity="right"
            android:id="@+id/take_tour"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <Button
                android:id="@+id/take_a_tour_btn"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:background="@drawable/tour"
                android:gravity="center_vertical|center"
                android:text="@string/take_a_tour"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_weight="0.06" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>