<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="-7dp"
    android:layout_marginLeft="-3dp"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearsss"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/relative111"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >


            <LinearLayout
                android:layout_margin="20dp"
                android:id="@+id/linear_logo_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sign_Up"
                    android:textColor="#ffffff"
                    android:textSize="35dp"
                    android:textStyle="bold"/>

            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:id="@+id/linear_email"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="0dp"
                            android:gravity="center_horizontal"
                            android:orientation="vertical" >

                            <EditText
                                android:layout_margin="10dp"
                                android:id="@+id/email_edit"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:hint="@string/signup_email"
                                android:imeOptions="actionNext"
                                android:inputType="textEmailAddress"
                                android:paddingLeft="10dp"
                                android:textColor="#FFF"
                                android:textColorHint="#DDD" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_margin="10dp"
                            android:id="@+id/linear_pwd"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center_horizontal"
                            android:orientation="vertical" >

                            <EditText
                                android:id="@+id/password_edit"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:hint="@string/signup_pwd"
                                android:imeOptions="actionDone"
                                android:inputType="textPassword"
                                android:paddingLeft="10dp"
                                android:textColor="#FFF"
                                android:textColorHint="#DDD" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/checkboxLay"
                            android:layout_margin="10dp"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="left|center"
                            android:orientation="horizontal" >

                            <CheckBox
                                android:id="@+id/checkbox"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginLeft="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ShowPassword"
                                android:textColor="#ffffff"
                                android:textSize="18dp"/>

                        </LinearLayout>

                    </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sign_up_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_primary"
                android:gravity="center_vertical|center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/Sign_Up"
                    android:textColor="#ffffff"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:paddingTop="18dp"
                    android:paddingBottom="18dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>